aakhrymenko/13.K8s.Manifest/home-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: persistent-storage
          mountPath: "/usr/share/nginx/html"       
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: home-app1-pv-claim         
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr1
  template:
    metadata:
      labels:
        app: sonarr1
    spec:
      containers:
      - name: sonarr
        image: hotio/sonarr
        ports:
        - containerPort: 8989
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - name: persistent-storage
          mountPath: "/config"       
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: home-app2-pv-claim 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr1
  template:
    metadata:
      labels:
        app: radarr1
    spec:
      containers:
      - name: radarr
        image: hotio/radarr
        ports:
        - containerPort: 7878
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - name: persistent-storage
          mountPath: "/config"       
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: home-app3-pv-claim 
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx1
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  labels:
    run: sonar-service
spec:
  type: LoadBalancer
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr1
---
apiVersion: v1
kind: Service
metadata:
  name: radar-service
  labels:
    run: radar-service
spec:
  type: LoadBalancer
  ports:
  - port: 7878
    protocol: TCP
  selector:
    app: radarr1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-home-sa
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: nginx.k8s-19.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
  - host: sonar.k8s-19.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-service
          servicePort: 8989
  - host: radar.k8s-19.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: radar-service
          servicePort: 7878
